--- a/dronezone/package.json
+++ b/dronezone/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5"
