--- a/dronezone/package.json
+++ b/dronezone/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.4.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5"
